commit to avoid horizontal scroll

--- a/main.scss
+++ b/main.scss
@@ -24,6 +24,7 @@
     color: $color-secondary;
     padding-left: 20px;
     padding-top: 50px;
+    margin-left: 30px;
 }
 
 .header {
@@ -39,6 +40,7 @@
         text-align: center;
         padding-top: 60px;
         padding-bottom: 40px;
+        margin-left: 30px;
     }
 
     .header__picture {
@@ -49,8 +51,7 @@
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+
     color: $color-primary;
     font-family: $font-secondary;
 
@@ -69,7 +70,8 @@
         .aboutme__picture {
 
             img {
-                max-width: 100%; height: auto;
+                max-width: 100%; 
+                height: auto;
                 padding-bottom: 40px;
             }
 
@@ -174,7 +176,7 @@
         }
 
         &__heading {
-            margin-top: 20px;
+            margin-top: 10px;
             font-size: 1.5rem;
             color: $color-secondary;
         }
@@ -188,24 +190,12 @@
         &__button {
             text-decoration: none;
             background-color: $color-third;
-            width: 100px;
             height: 30px;
         }
     }
 
 
 }
-
-
-
-
-
-/*
-    
-
-*/
-
-
 
 .footer {
     height: 150px;
@@ -251,8 +241,8 @@
 
 
 
+//////////////
 /*
-
 @media screen and (min-width: 320px){
 
     .navbar {
